# bcrt-validation

./: README.md  pyproject.toml
config/: config.yaml
data/interim/: liwc_manifest.csv  resp_raw_clean.csv  scored_long.csv
data/processed/: liwc_merged.csv  liwc_var_list.csv  person_full.csv  person_naive.csv  person_naive_with_liwc.csv  person_wide.csv  person_with_liwc.csv
data/raw/: LIWC_Q1.csv  LIWC_Q2.csv  Understanding Styles of Thinking - (Online) v2.0_28 August 2025_15.43.csv
reports/tables/: correlations_totals.csv  correlations_totals_full.csv  correlations_totals_full_sig.csv  correlations_totals_naive.csv  correlations_totals_naive_sig.csv  irt2pl_bcrt.csv  irt2pl_crt2.csv  liwc_families_glmm_crt_sets.csv  liwc_families_stacked_crt2.csv  liwc_predict_families_combined.csv  liwc_predict_families_full.csv  liwc_predict_families_naive.csv  liwc_variables_manifest_full.csv  liwc_variables_manifest_naive.csv  nfc_correlations.csv  per_item_stats.csv  per_item_stats_full.csv  per_item_stats_naive.csv  per_item_stats_with_unseen.csv  reliability.csv  reliability_full.csv  reliability_naive.csv  scoring_audit.csv  selection_decision.csv  selection_diagnostics.csv  selection_scores.csv  selection_summary.md
src/: 00_load_and_qc.py  01_score_items.py  02_make_splits.py  03_item_stats.py  04_reliability.py  05_liwc_io.py  06_convergent_validity.py  06_external_validity.py  06b_convergent_exploration.py  07_irt_2pl.py  07_selection_rule.py  08_irt_2pl.py  08_selection_rule.py  99_report.py  llm_classify.py  utils.py
src/Archive/: 04_reliability_v1.py  (+5 more)
(+821 files in other folders)
