[project]
name = "bcrt-validation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "pingouin>=0.5.5",
  "matplotlib>=3.8",
  "pyarrow>=15.0",
  "rapidfuzz>=3.9",
  "openai>=1.40",
]

[tool.ruff]
line-length = 100
